[tool.poetry]
name = "bytewax-iceberg-connector"
version = "0.1.0"
description = "High-performance Apache Iceberg Connector for Bytewax"
packages = [{ include = "bytewax_iceberg_connector", from = "src" }]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyiceberg = "^0.6.0"
pyarrow = "^15.0.0"
bytewax = "0.21.1"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pylint = "^3.3.7"
setuptools = "^80.8.0"
pytest-cov = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
